--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity android:name="com.gao.downloader.MainActivity" >
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+
+        </activity>
+         <activity android:name="com.gao.downloader.ListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
