--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name="com.gao.downloader.MainActivity" >
+        <activity android:name="com.gao.downloader.ui.MainActivity" >
 
             <!--
             <intent-filter>
@@ -23,7 +23,7 @@
             -->
 
         </activity>
-         <activity android:name="com.gao.downloader.ListActivity" >
+         <activity android:name="com.gao.downloader.ui.ListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,7 +31,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.gao.downloader.DownloadService" />
+        <service android:name="com.gao.downloader.core.DownloadService" />
     </application>
 
 </manifest>
